fix z-index

--- a/components/Filters/Filters.module.scss
+++ b/components/Filters/Filters.module.scss
@@ -5,7 +5,7 @@
         left: 0;
         width: 100%;
         height: 100vh;
-        z-index: 10000;
+        z-index: 30000;
         background-color: rgba(#000, 0.5);
         opacity: 0;
         visibility: hidden;
